# mango

./: .gitlab-ci.yml  ReadMe.md  cp_test_files.sh  gen_test_img.sh
cli/: .gitignore  Makefile  mangoconvert.py  mangocreate.py  mangoinfo.py  mangometa.py  setup.py
format/: Cargo.toml  License
format/src/: bson_format.rs  file.rs  json.rs  lib.rs  meta.rs  util.rs
formatInterface/: Cargo.toml  build_check.sh  check_test.c  libmango.h  test.c
formatInterface/src/: lib.rs  util.rs
formatInterface/test/: build_check.sh  build_wtf.sh  data.c  test_file.c  wtf.c
libmango/: .gitignore  Cargo.toml  Makefile  ReadMe.md  libmango.h  libmango.pc  template.pc
libmango/docs/: Doxyfile  custom.css  examples.c
libmango/examples/: checksum.c  imgdata.c  print_iv.c  save_n_open.c
libmango/scripts/: createPkgConfig.sh  getVersion.sh  readme
libmango/src/: lib.rs  util.rs
libmango/test/: data.c  run_tests  test.c  test.h  test_file.c  test_image.c  wtf.c
mangofmt/: .gitignore  Cargo.toml  ReadMe.md
mangofmt/src/: file.rs  json.rs  lib.rs  meta.rs
mangofmt/src/compression/: gzip.rs  mod.rs
mangofmt/src/encryption/: mod.rs  openssl_mods.rs  tiger.rs
mangofmt/src/image/: base64_image.rs  image_file.rs  mango_image.rs  mime.rs  mod.rs
pymango/: Cargo.toml  Makefile  nya.py  setup.py
pymango/pymango/: __init__.py  _mango.py  c.py  error.py  mango.py  new.py
pymango/src/: enums.rs  lib.rs
pymango/tests/: test_file.py  test_image.py
pymangofmt/: Makefile
pymangofmt/mangofmt/: __init__.py  c.py  enums.py  error.py  mango.py
pythonLib/: init.sh  test.py
(+18 files in other folders)
