[package]
name = "mangofmt"
version = "0.1.0"
authors = ["Alex Fence <alexfence.code@gmail.com>"]

["features"]
aes = ["openssl", "tiger-digest"]
default = ["aes"]

[dependencies]
base64 = "0.6.0"
flate2 = "0.2.19"
sha2 = "0.6.0"
hex = "0.2.0"
serde = "1.0.10"
serde_json = "1.0.2"
serde_derive = "1.0"
openssl = { version = "0.10.10", optional = true }
bson = {git = "https://github.com/zonyitoo/bson-rs.git" }
serde_bytes = "0.10"
serde_cbor = "0.8.2"
tiger-digest = { version = "0.1.1", optional = true }
