[package]
name = "mangofmt"
version = "0.5.0"
authors = ["Alex Fence <alexfence.code@gmail.com>"]
license = "MIT"
repository = "https://github.com/AlexFence/mango.git"
description = "file format for manga"
readme = "ReadMe.md"

["features"]
aes = ["openssl", "tiger-digest"]
gzip = ["flate2"]
default = []

[dependencies]
base64 = "0.6.0"
flate2 = { version = "0.2.19", optional = true }
sha2 = "0.6.0"
hex = "0.2.0"
serde = "1.0.10"
serde_json = "1.0.2"
serde_derive = "1.0"
openssl = { version = "0.10.10", optional = true }
bson = "0.13.0" 
serde_bytes = "0.10"
serde_cbor = "0.8.2"
tiger-digest = { version = "0.1.1", optional = true }
